# rust-algorithms

Math/: Cargo.toml
Math/src/: euclid.rs
Sort/: Cargo.toml
Sort/src/: bubble.rs  counting.rs  insertion.rs  merge.rs  quick.rs  selection.rs
