[package]
name = "sort"
version = "0.1.0"
authors = ["Masashi Hirano <shisama07@gmail.com>"]
edition = "2018"

[dependencies]

[[bin]]
name = "quick"
path = "src/quick.rs"

[[bin]]
name = "merge"
path = "src/merge.rs"

[[bin]]
name = "bubble"
path = "src/bubble.rs"

[[bin]]
name = "selection"
path = "src/selection.rs"

[[bin]]
name = "insertion"
path = "src/insertion.rs"

[[bin]]
name = "counting"
path = "src/counting.rs"
